--- a/Blogcss/blog.css
+++ b/Blogcss/blog.css
@@ -2,6 +2,8 @@
   margin-top: 50px;
   display: flex;
   gap: 20px;
+  margin-bottom: 50px;
+  /* Google ads section--------------- */
 }
 .Blog-page .blog-page-headhing {
   text-transform: uppercase;
@@ -9,12 +11,16 @@
   margin-bottom: 20px;
 }
 .Blog-page .blogsidebar {
-  width: 500px;
+  width: 100%;
+  flex: 4;
+}
+.Blog-page .blogpagecontent {
+  flex: 8;
 }
 .Blog-page .blog {
   display: flex;
   gap: 20px;
-  border-bottom: 0.5px solid rgb(132, 132, 132);
+  border-bottom: 0.5px solid rgb(216, 216, 216);
   padding-bottom: 10px;
   padding-top: 10px;
 }
@@ -33,4 +39,20 @@
   width: 500px;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   color: #39c5ee;
+}
+
+@media (max-width: 768px) {
+  .Blog-page {
+    flex-direction: column;
+  }
+  .blogsidebar {
+    padding: 10px;
+    order: 1;
+  }
+  .blogpagecontent {
+    order: 2;
+  }
+  .blog {
+    flex-direction: column;
+  }
 }/*# sourceMappingURL=blog.css.map */
