--- a/Blogcss/blog.scss
+++ b/Blogcss/blog.scss
@@ -2,18 +2,25 @@
   margin-top: 50px;
     display: flex;
     gap: 20px;
+    margin-bottom: 50px;
   .blog-page-headhing {
     text-transform: uppercase ;
     border-bottom: 1px solid black;
     margin-bottom: 20px;
   }
+  /* Google ads section--------------- */
   .blogsidebar{
-    width: 500px;
+    width: 100%;
+    flex: 4;
+  }
+  
+  .blogpagecontent{
+    flex: 8;
   }
   .blog {
     display: flex;
     gap: 20px;
-    border-bottom: 0.5px solid rgb(132, 132, 132);
+    border-bottom: 0.5px solid rgb(216, 216, 216);
     padding-bottom: 10px;
     padding-top: 10px;
   }
@@ -25,7 +32,6 @@
   }
   .blog-img {
     width: 100%;
-    // height: 100%;
   }
   .postdate {
     font-style: italic;
@@ -35,5 +41,20 @@
     width: 500px;
     grid-template-columns: repeat(2, minmax(0, 1fr));
     color: #39c5ee;
+  }
+}
+@media(max-width:768px){
+  .Blog-page{
+    flex-direction: column;
+  }
+  .blogsidebar{
+    padding: 10px;
+    order: 1;
+  }
+  .blogpagecontent{
+    order: 2;
+  }
+  .blog{
+    flex-direction: column;
   }
 }
